# rust_database

./: Cargo.toml  database.json  database_hash.txt  readme.md
src/: ai_assistant.rs  gui.rs  main.rs  part1.rs  part2.rs
