[package]
name = "sql_homework"
version = "0.1.0"
edition = "2021"

[build]
# 包含资源文件
include = ["assets/*"]

[dependencies]
eframe = "0.29.1"
egui = "0.29.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winapi = { version = "0.3.9", features = ["winuser", "windef"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
sha2 = "0.10"